# PowerLLEL_Channel_SYCL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/template/: build_spack_oneapi.sh  param.json
src/: CMakeLists.txt  decomp_2d.cc  decomp_2d.hh  gptl.hh  main.cc  mod_calcRHS.cc  mod_calcRHS.hh  mod_calcVel.cc  mod_calcVel.hh  mod_dataIO.cc  mod_dataIO.hh  mod_fft.cc  mod_fft.hh  mod_hdf5.cc  mod_hdf5.hh  mod_initFlow.cc  mod_initFlow.hh  mod_mesh.cc  mod_mesh.hh  mod_monitor.cc  mod_monitor.hh  mod_mpi.cc  mod_mpi.hh  mod_oneapi.hh  mod_parameters.cc  mod_parameters.hh  mod_poisson_solver.cc  mod_poisson_solver.hh  mod_statistics.cc  mod_statistics.hh  mod_type.hh  mod_updateBound.cc  mod_updateBound.hh  mod_utils.cc  mod_utils.hh  mod_variables.cc  mod_variables.hh
